// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> check how renders should render error from ErrorBoundary 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 2.4rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > *:not(:last-child) {
  margin-bottom: 2.4rem;
}

.c2 {
  font-size: 2.4rem;
  font-family: Noto Sans,sans-serif;
  line-height: 1;
  margin-bottom: 2.4rem;
  margin-top: 0;
  text-align: center;
  line-height: 1.3;
}

.c1 {
  padding: 0 1.2rem;
}

.c1 > svg {
  max-width: 100%;
  width: 60rem;
}

@media only screen and (max-width:75em) {

}

@media only screen and (max-width:56.25em) {

}

@media only screen and (max-width:37.5em) {

}

@media only screen and (max-width:37.5em) {

}

@media only screen and (max-width:56.25em) {

}

@media only screen and (max-width:37.5em) {

}

<div
    class="c0 c1"
    direction="column"
    spacing="3"
    width="100%"
    wrap="nowrap"
  >
    <h3
      class="c2"
    >
      Something went wrong. Please refresh the page
    </h3>
    <svg>
      unexpected-bug.svg
    </svg>
  </div>
</DocumentFragment>
`;

exports[`<App /> check how renders should render loading screen 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 2.4rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > *:not(:last-child) {
  margin-right: 0;
}

.c1 {
  display: inline-block;
  position: relative;
  width: 7rem;
  height: 7rem;
}

.c1 > div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  border-radius: 50%;
  -webkit-animation: rotate 1.2s cubic-bezier(0.5,0,0.5,1) infinite;
  animation: rotate 1.2s cubic-bezier(0.5,0,0.5,1) infinite;
  width: 7rem;
  height: 7rem;
  border: 0.8rem solid #1E8BC3;
  border-color: #1E8BC3 transparent transparent transparent;
}

.c1 > div:nth-child(1) {
  -webkit-animation-delay: -0.45s;
  animation-delay: -0.45s;
}

.c1 > div:nth-child(2) {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.c1 > div:nth-child(3) {
  -webkit-animation-delay: -0.15s;
  animation-delay: -0.15s;
}

<div
    class="c0"
    direction="row"
    spacing=""
    width="100%"
    wrap="nowrap"
  >
    <div
      class="c1"
      data-testid="Loader"
    >
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<App /> check how renders should render server connection error if we do NOT wait for setting token in useEffect() 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 2.4rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > *:not(:last-child) {
  margin-bottom: 2.4rem;
}

.c2 {
  font-size: 2.4rem;
  font-family: Noto Sans,sans-serif;
  line-height: 1;
  margin-bottom: 2.4rem;
  margin-top: 0;
  text-align: center;
  line-height: 1.3;
}

.c1 {
  padding: 0 1.2rem;
}

.c1 > svg {
  max-width: 100%;
  width: 60rem;
}

<div
    class="c0 c1"
    direction="column"
    spacing="3"
    width="100%"
    wrap="nowrap"
  >
    <h3
      class="c2"
    >
      Oops! Server connection error. Please try again later
    </h3>
    <svg>
      server-connection-error.svg
    </svg>
  </div>
</DocumentFragment>
`;

exports[`<App /> check how renders should render version for user with active status 1`] = `
<DocumentFragment>
  .c1 {
  font-family: Lobster,cursive;
  font-size: 3.3rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-shadow: 0 0 3px rgba(0,0,0,0.3);
  margin-top: 0;
  text-align: left;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 3.4rem;
  height: 3.4rem;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c8 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0.8rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  text-align: right;
  font-size: 1.5rem;
  max-width: 15rem;
}

.c3 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c3:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAFAFA;
  box-shadow: 0 1px 5px rgba(0,0,0,0.3);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  padding: 0.8rem 3.6rem;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 10000;
}

.c0 > *:not(:last-child) {
  margin-right: 3.6rem;
}

.c0 .logo {
  width: 4.6rem;
  height: 4.6rem;
  margin-right: 0.8rem;
}

.c0 .header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  width: 45rem;
}

.c2 .name-input {
  background-color: #FAFAFA;
  border: 1px solid #BFBFBF;
  font-size: 1.5rem;
  outline: none;
  padding: 0.8rem;
  width: 100%;
}

.c5 {
  position: relative;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 > *:not(:last-child) {
  margin-right: 3.6rem;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.8rem 0;
  position: relative;
}

@media only screen and (max-width:75em) {
  .c0 .heading {
    display: none;
  }
}

@media only screen and (max-width:56.25em) {
  .c0 {
    padding: 0.8rem 2.4rem;
  }

  .c0 > *:not(:last-child) {
    margin-right: 2.4rem;
  }
}

@media only screen and (max-width:37.5em) {
  .c0 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }

  .c0 > *:nth-child(2) {
    margin-right: 0;
    margin-top: 0.8rem;
    width: 100%;
  }
}

@media only screen and (max-width:37.5em) {
  .c2 {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

@media only screen and (max-width:56.25em) {
  .c4 > *:not(:last-child) {
    margin-right: 2.4rem;
  }
}

@media only screen and (max-width:37.5em) {

}

<header
    class="c0"
  >
    <a
      data-testid="Navbar-header-link"
    >
      <header
        class="header"
      >
        <img
          alt="E-Shopping"
          class="logo"
          src="logo.png"
        />
        <h1
          class="c1 heading"
        >
          shopping
        </h1>
      </header>
    </a>
    <form
      class="c2"
    >
      <input
        autocomplete="off"
        class="name-input"
        data-testid="SearchForm-input"
        maxlength="150"
        name="product"
        spellcheck="false"
        type="text"
        value=""
      />
      <button
        aria-label="Search"
        class="c3"
        color="blue"
        type="submit"
      >
        search
      </button>
    </form>
    <nav
      class="c4"
      data-testid="LoggedInLinks"
    >
      <a
        class="c5"
        data-testid="CartLink"
      >
        <div
          class="c6"
          color=""
        >
          <svg>
            cart.svg
          </svg>
        </div>
      </a>
      <div
        class="c7"
        data-testid="LoggedInLinks-user-box"
        id="user"
      >
        <span
          class="c8"
          color=""
          display="inline-block"
          overflow="hidden"
          size="3"
          spacing="0px"
          transform=""
        >
          username
        </span>
        <div
          class="c9"
          color=""
        >
          <svg>
            arrow.svg
          </svg>
        </div>
        <div />
      </div>
    </nav>
  </header>
  .c1 {
  display: inline-block;
  position: relative;
  width: 7rem;
  height: 7rem;
}

.c1 > div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  border-radius: 50%;
  -webkit-animation: rotate 1.2s cubic-bezier(0.5,0,0.5,1) infinite;
  animation: rotate 1.2s cubic-bezier(0.5,0,0.5,1) infinite;
  width: 7rem;
  height: 7rem;
  border: 0.8rem solid #1E8BC3;
  border-color: #1E8BC3 transparent transparent transparent;
}

.c1 > div:nth-child(1) {
  -webkit-animation-delay: -0.45s;
  animation-delay: -0.45s;
}

.c1 > div:nth-child(2) {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.c1 > div:nth-child(3) {
  -webkit-animation-delay: -0.15s;
  animation-delay: -0.15s;
}

.c0 {
  margin: 0 auto;
  max-width: 120rem;
  min-height: 100vh;
  padding: 8.7rem 1.2rem 2.4rem;
}

@media only screen and (max-width:75em) {

}

@media only screen and (max-width:56.25em) {

}

@media only screen and (max-width:37.5em) {

}

@media only screen and (max-width:37.5em) {

}

@media only screen and (max-width:56.25em) {

}

@media only screen and (max-width:37.5em) {
  .c0 {
    padding-top: 13.6rem;
  }
}

<main
    class="c0"
    data-testid="App-user-active"
  >
    <div
      style="text-align: center;"
    >
      <div
        class="c1"
        data-testid="Loader"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
    </div>
  </main>
  .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 1.2rem;
  margin-right: 0;
  margin-bottom: 1.2rem;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 2.5rem;
  height: 2.5rem;
}

.c1 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.4rem;
}

.c4 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0.8rem;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.3rem;
}

.c0 {
  border-top: 1px solid #BFBFBF;
  padding: 2.4rem 1.2rem;
  text-align: center;
}

.c0 .social-link {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .about-website {
  color: #777;
  cursor: pointer;
  font-size: 1.3rem;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c0 .about-website:hover {
  color: #000;
}

@media only screen and (max-width:75em) {

}

@media only screen and (max-width:56.25em) {

}

@media only screen and (max-width:37.5em) {

}

@media only screen and (max-width:37.5em) {

}

@media only screen and (max-width:56.25em) {

}

@media only screen and (max-width:37.5em) {

}

<footer
    class="c0"
  >
    <span
      class="c1"
      color=""
      display="inline-block"
      overflow="visible"
      size="2"
      spacing="0px"
      transform=""
    >
      © 2021 Radosław Mikrut. All rights reserved
    </span>
    <div
      class="c2"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <a
        class="social-link"
        href="https://www.linkedin.com/in/rados%C5%82aw-mikrut-a8600b198/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          class="c3"
          color=""
        >
          <svg>
            linkedin.svg
          </svg>
        </div>
      </a>
      <a
        class="social-link"
        href="mailto:radoslawmikrut@wp.pl"
        rel="noopener noreferrer"
      >
        <div
          class="c3"
          color=""
        >
          <svg>
            email.svg
          </svg>
        </div>
        <span
          class="c4"
          color=""
          display="inline-block"
          overflow="visible"
          size="1"
          spacing="0px"
          transform=""
        >
          radoslawmikrut@wp.pl
        </span>
      </a>
    </div>
    <span
      class="about-website"
      role="button"
      tabindex="0"
    >
      About website
    </span>
  </footer>
</DocumentFragment>
`;
